# Ground_Robot_Performing_Tasks_Autonomously_By_Perception

./: README.md
turtlebot3_ws/src/data/: pose_data.json  tf_log.csv
turtlebot3_ws/src/maps/: map.pgm  map~.yaml  trajectory_map.pgm
turtlebot3_ws/src/tf_logger_pkg/: package.xml  setup.cfg  setup.py
turtlebot3_ws/src/tf_logger_pkg/tf_logger_pkg/: tf_logger.py
