<?xml version="1.0"?>
<package format="3">
  <name>tf_logger_pkg</name>
  <version>0.0.0</version>
  <description>TF logger node that writes x,y,yaw,time to ~/tf_log.csv</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
